Fix jumplink headers position.
Also add in a style to position multiple headers which don't have any
content in between them closer together.

--- a/src/components/jumplink-header/JumplinkHeader.module.css
+++ b/src/components/jumplink-header/JumplinkHeader.module.css
@@ -1,57 +1,65 @@
 .jumplinkHeader {
-	display: inline;
+  display: inline;
+  scroll-margin-top: var(--header-height);
 
-	& .content {
-		display: flex;
-		align-items: center;
+  & .content {
+    display: flex;
+    align-items: center;
 
-		&.h1{
-			margin-top: 68px;
-			margin-bottom: 26px;
-		}
-		&.h2{
-			margin-top: 52px;
-			margin-bottom: 20px;
-		}
-		&.h3{
-			margin-top: 39px;
-			margin-bottom: 15px;
-		}
-		&.h4{
-			margin-top: 34px;
-			margin-bottom: 13px;
-		}
-		&.h5{
-			margin-top: 26px;
-			margin-bottom: 10px;
-		}
-		&.h6{
-			margin-top: 23px;
-			margin-bottom: 9px;
-		}
+    &.h1{
+      margin-top: 68px;
+      margin-bottom: 26px;
+    }
+    &.h2{
+      margin-top: 52px;
+      margin-bottom: 20px;
+    }
+    &.h3{
+      margin-top: 39px;
+      margin-bottom: 15px;
+    }
+    &.h4{
+      margin-top: 34px;
+      margin-bottom: 13px;
+    }
+    &.h5{
+      margin-top: 26px;
+      margin-bottom: 10px;
+    }
+    &.h6{
+      margin-top: 23px;
+      margin-bottom: 9px;
+    }
 
-		& .jumplinkCopy {
-			margin-left: 16px;
-			transition: opacity .2s ease;
-			opacity: 0;
-		}
-		&:hover {
-			& .jumplinkCopy {
-				opacity: 1;
-			}
-		}
-	}
+
+    & .jumplinkCopy {
+      margin-left: 16px;
+      transition: opacity .2s ease;
+      opacity: 0;
+    }
+    &:hover {
+      & .jumplinkCopy {
+        opacity: 1;
+      }
+    }
+  }
+
+  & + .jumplinkHeader {
+    & .content {
+      margin-top: 0;
+    }
+  }
 }
 
 .jumplinkCopy {
-	display: flex;
-	padding: 4px;
-	border: 1px solid var(--gray-4);
-	border-radius: 3px;
+  display: flex;
+  padding: 4px;
+  border: 1px solid var(--gray-4);
+  border-radius: 3px;
 
-	& .icon {
-		width: 16px;
-		height: 16px;
-		color: var(--brand-color);
-	}
+  & .icon {
+    width: 16px;
+    height: 16px;
+    color: var(--brand-color);
+  }
 }
